# OSINTbot

./: .gitignore  README.md  bot.py  config.json  example.config.json  install_tool_ssl_patch.py  osint_bot.py  patch_blackbird.py  pyproject.toml  requirements.txt  run_bot.bat  run_bot.py  run_bot.sh  setup.bat  setup.sh  sitecustomize.py  update_tools.bat  update_tools.sh
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  MAINTENANCE.md
osintbot/: __init__.py  __main__.py  config.py  discord_app.py  maintenance.py  models.py  orchestration.py  process.py  tool_manifest.json
tests/: test_config.py  test_maintenance.py  test_orchestration.py  test_parsers.py  test_process.py
tool_shims/: bot_maintenance.py  osintbot_tool_shims.py  setup.py
tool_shims/osintbot_tool_shims.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
