[build-system]
requires = ["setuptools>=75,<76", "wheel>=0.44,<1"]
build-backend = "setuptools.build_meta"

[project]
name = "osintbot"
version = "1.0.0"
description = "Discord bot that consolidates OSINT tool results"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "certifi==2026.2.25",
  "discord.py==2.6.4",
  "python-whois==0.9.6",
  "requests==2.32.5",
]

[project.optional-dependencies]
dev = [
  "build==1.3.0",
  "mypy==1.18.2",
  "pytest==8.4.2",
  "pytest-asyncio==1.2.0",
  "ruff==0.14.1",
]

[project.scripts]
osintbot = "osintbot.discord_app:main"
osintbot-maintenance = "osintbot.maintenance:main"

[tool.setuptools.packages.find]
include = ["osintbot*"]

[tool.setuptools.package-data]
osintbot = ["tool_manifest.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint.per-file-ignores]
"osintbot/discord_app.py" = ["E402"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
ignore_missing_imports = true
